[gd_scene load_steps=2 format=3 uid="uid://c4ioxrv2edq3"]

[ext_resource type="Script" uid="uid://bk8gexihhm14f" path="res://Menus/Scripts/player_select_menu.gd" id="1_qfdwg"]

[node name="PlayerSelectMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qfdwg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player #"

[node name="Controller" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 1
popup/item_0/text = "Keyboard & Mouse"
popup/item_0/id = 99

[node name="Character" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 5
popup/item_0/text = "Rocketeer"
popup/item_0/id = 0
popup/item_1/text = "Vampire"
popup/item_1/id = 1
popup/item_2/text = "Flying Squirrel"
popup/item_2/id = 2
popup/item_3/text = "Gecko"
popup/item_3/id = 3
popup/item_4/text = "Climbers"
popup/item_4/id = 4

[node name="Leave" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leave"

[connection signal="item_selected" from="VBoxContainer/Controller" to="." method="_on_controller_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Character" to="." method="_on_character_item_selected"]
[connection signal="pressed" from="VBoxContainer/Leave" to="." method="_on_leave_pressed"]
